--- a/public/assets/new/back-end/css/style.css
+++ b/public/assets/new/back-end/css/style.css
@@ -1053,8 +1053,8 @@ code.hljs {
 }
 
 .pos-item-wrap {
-  display: grid;
-  grid-template-columns: repeat(auto-fill, minmax(140px, 1fr));
+  display: flex;
+  flex-direction: column;
   gap: 15px;
   max-block-size: 61vh;
   overflow-y: auto;
@@ -1062,10 +1062,10 @@ code.hljs {
 }
 
 .pos-product-item {
-  cursor: pointer;
   overflow: hidden;
   border-radius: 5px !important;
   position: relative;
+  width: 100%;
 }
 
 .pos-product-item_thumb {
