--- a/public/assets/new/back-end/css/style.scss
+++ b/public/assets/new/back-end/css/style.scss
@@ -1040,8 +1040,8 @@ $size: 50px;
 }
 
 .pos-item-wrap {
-    display: grid;
-    grid-template-columns: repeat(auto-fill, minmax(140px, 1fr));
+    display: flex;
+    flex-direction: column;
     gap: 15px;
     max-block-size: 61vh;
     overflow-y: auto;
@@ -1049,10 +1049,10 @@ $size: 50px;
 }
 
 .pos-product-item {
-    cursor: pointer;
     overflow: hidden;
     border-radius: 5px !important;
     position: relative;
+    width: 100%;
 }
 .pos-product-item_thumb {
     // height: 152px;
