Fix POS add-to-cart validation and hover overlay

--- a/public/assets/new/back-end/css/style.scss
+++ b/public/assets/new/back-end/css/style.scss
@@ -1094,6 +1094,7 @@ $size: 50px;
     transition: all 0.3sease;
     opacity: 0;
     visibility: hidden;
+    pointer-events: none;
 }
 .pos-product-item:hover .pos-product-item_hover-content {
     opacity: 1;
