--- a/public/assets/back-end/css/style.css
+++ b/public/assets/back-end/css/style.css
@@ -1651,6 +1651,7 @@ img {
   transition: all 0.3s ease;
   opacity: 0;
   visibility: hidden;
+  pointer-events: none;
 }
 
 .pos-product-item:hover .pos-product-item_hover-content {
