--- a/public/assets/back-end/css/style.scss
+++ b/public/assets/back-end/css/style.scss
@@ -1693,6 +1693,7 @@ img {
     transition: all 0.3s ease;
     opacity: 0;
     visibility: hidden;
+    pointer-events: none;
 }
 
 .pos-product-item:hover .pos-product-item_hover-content {
