--- a/public/assets/new/back-end/css/style.css
+++ b/public/assets/new/back-end/css/style.css
@@ -1111,6 +1111,7 @@ code.hljs {
   transition: all 0.3sease;
   opacity: 0;
   visibility: hidden;
+  pointer-events: none;
 }
 
 .pos-product-item:hover .pos-product-item_hover-content {
